--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asn1crypto==0.24.0
 bleach==2.1.3
 cachetools==2.1.0
 certifi==2018.4.16
@@ -35,3 +36,4 @@ urllib3==1.23
 webencodings==0.5.1
 Werkzeug==0.14.1
 WTForms==2.2.1
+
