--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ rsa==4.0
 six==1.12.0
 SQLAlchemy==1.2.15
 uritemplate==3.0.0
-urllib3==1.24.1
+urllib3>=1.24.2
 webencodings==0.5.1
 Werkzeug==0.14.1
 WTForms==2.2.1
