--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ html5lib==1.0.1
 httplib2==0.12.0
 idna==2.8
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.1.0
 oauth2client==4.1.3
 packaging==18.0
@@ -30,7 +30,7 @@ redis==3.0.1
 requests==2.21.0
 rsa==4.0
 six==1.12.0
-SQLAlchemy==1.2.15
+SQLAlchemy>=1.3.0
 uritemplate==3.0.0
 webencodings==0.5.1
 Werkzeug==0.14.1
